--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".HomeActivity"/>
-        <activity android:name=".RegisterUserActivity"/>
+        <activity android:name=".RegisterUserActivity"
+            android:windowSoftInputMode="stateVisible"
+            android:label="@string/Register"/>
     </application>
 </manifest>
