--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Rentables"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -20,4 +19,6 @@
             android:windowSoftInputMode="stateVisible"
             android:label="@string/Register"/>
     </application>
+    <uses-permission
+        android:name = "android.permission.INTERNET" />
 </manifest>
